tests/cases/parser/misc/malformed_access_name.stderr
error: unexpectedly encountered a `(...)`
 --> $DIR/malformed_access_name.hash:9:7
8 |   
9 |   a::b:c()
  |         ^^ 
  = help: consider adding a `;`
